# lidtk

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  conftest.py  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
experiments/: baseline.yaml  tfidf_small.yaml
experiments/networks/: relu_small.py
lidtk/: __init__.py  cli.py  config.yaml  features.py  get_predictions.py  languages.csv  utils.py
lidtk/analysis/: __init__.py  create_cm.py  unicode_block.py
lidtk/classifiers/: __init__.py  char_features.py  cld2_mod.py  google_mod.py  langdetect_mod.py  langid_mod.py  mlp.py  text_cat.py  tfidf_features.py  tfidf_nn.py
lidtk/classifiers/char_distribution/: char_dist_metric_train_test.py
lidtk/classifiers/cld2/: cld2_utils.py  cld2wili.py
lidtk/classifiers/config/: cld2.yaml  google-cloud.yaml  langdetect.yaml  langid.yaml  textcat.yaml  tfidf_nn.yaml  tfidf_nn_big.yaml  tfidf_nn_case_sensitive.yaml
lidtk/classifiers/langdetect/: langdetect_utils.py
lidtk/classifiers/nn/: __init__.py
lidtk/classifiers/text_cat/: REAMDE.md  textcat_ngram.py
lidtk/data/: char_distribution.py  create_ml_dataset.py  download_documents.py  language_utils.py  pickle_to_txt.py  results.txt  wili.py
lidtk/models/: mlp.py  service_cld2.py  service_detectlanguage.py
requirements/: ci.in  ci.txt  dev.in  dev.txt  prod.in  prod.txt
tests/: test_char_dist.py  test_classifiers.py  test_download_documents.py  test_language_utils.py  test_utils.py
