[metadata]
name = lidtk

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.2.2

description = Language identification Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Machine Learning, Data Science

platforms = Linux

url = https://github.com/MartinThoma/language-identification
download_url = https://github.com/MartinThoma/language-identification

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    lidtk = lidtk.cli:entry_point

[tool:pytest]
addopts = --doctest-modules --cov=./lidtk --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=300
doctest_encoding = utf-8

[pydocstyle]
match_dir = lidtk
ignore = D105, D413, D107, D416, D212, D203, D417

[flake8]
max-line-length = 88
exclude = tests/*,.tox/*,.nox/*
extend-ignore = E203,E501,E231,N806,N803,N802

[mypy]
ignore_missing_imports = True
